package com.example.homework.Bridge_pattern;

public interface CoffeeAdditives {
    void addSomething();
}
