package com.example.homework.Bridge_pattern;

public interface CoffeeSize {
    void pourCoffee();
}
