package com.example.homework.Bridge_pattern;

public class Lemon implements CoffeeAdditives {
    @Override
    public void addSomething() {
        System.out.println("with lemon");
    }
}

