package com.example.homework.Bridge_pattern;

public class MediumCoffee implements CoffeeSize {
    @Override
    public void pourCoffee() {
        System.out.print("Pouring medium coffee");
    }
}

